# cloud-processing

./: main.tf  readme.md  variables.tf
boot/: go.mod  go.sum  index.go
cut/: CMakeLists.txt  Dockerfile  main.cxx
cut/include/cloud/: cloud.hh
cut/include/generator/: generator.hh
cut/include/parser/: parser.hh
cut/include/processing/: processing.hh
detect/: main.sh
